--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -13,6 +13,7 @@ body, .top-menu a {
     color: white;
 }
 
+/* Category and product list css */
 .subcategories h5, h2 {
     color: #0b447c !important;
 }
@@ -23,6 +24,18 @@ a.subcategory-name {
 
 a.subcategory-name:hover, .top-menu a:hover{
     color: #2f84da !important;
+}
+
+.thumbnail-container {
+    border: 1px solid lightgray;
+}
+
+.product-flag.discount {
+    background-color: #840000;
+}
+
+.product-flag.new {
+    background-color: #0b447c;
 }
 
 /* shadow boxes */
@@ -37,3 +50,4 @@ div.block-categories {
 #search_filters_wrapper {
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
 }
+
