--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -32,7 +32,7 @@ div.header-top, .header-top .sub-menu {
 }
 
 .header-top a:hover {
-    color: #c8dbee;
+    color: #c8dbee !important;
 }
 
 .header-nav {
@@ -62,7 +62,7 @@ div.header-top, .header-top .sub-menu {
 }
 
 .ui-menu-item a:hover {
-    background-color: green !important;
+    background-color: #2f84da !important;
 }
 
 /* Category and product list css */
