--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -53,16 +53,16 @@ div.header-top, .header-top .sub-menu {
     background-color: #0b447c !important;
 }
 
-.ui-menu-item {
+li.ui-menu-item {
     background-color: #0b447c !important;
 }
 
-.ui-menu-item a {
+li.ui-menu-item a {
     font-family: 'Ubuntu', sans-serif;
     color: white !important;
 }
 
-.ui-menu-item a:hover {
+li.ui-menu-item a:hover {
     background-color: #2f84da !important;
 }
 
