--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -74,6 +74,14 @@ li.ui-menu-item a:hover {
     color: #0b447c !important;
 }
 
+/* Footer */
+
+#footer form .btn {
+    background-color: #0b447c !important;
+    border: 1px solid #0b447c !important;
+    border-radius: 5px !important;
+}
+
 /* Category and product list css */
 .subcategories h5, h2 {
     color: #0b447c !important;
@@ -112,3 +120,10 @@ div.block-categories {
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
 }
 
+#subcategories {
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+}
+
+#wrapper {
+    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
+}
