--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -82,6 +82,17 @@ li.ui-menu-item a:hover {
     border-radius: 5px !important;
 }
 
+#footer form .btn:hover {
+    background-color: #2f84da !important;
+    border: 1px solid #2f84da !important;
+    border-radius: 5px !important;
+}
+#footer form .input-wrapper input {
+    color: #0b447c !important;
+}
+#footer form .input-wrapper input:focused {
+    border: 4px solid #0b447c !important;
+}
 /* Category and product list css */
 .subcategories h5, h2 {
     color: #0b447c !important;
