--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -90,7 +90,7 @@ li.ui-menu-item a:hover {
 #footer form .input-wrapper input {
     color: #0b447c !important;
 }
-#footer form .input-wrapper input:focused {
+#footer form .input-wrapper input:focus {
     border: 4px solid #0b447c !important;
 }
 /* Category and product list css */
