--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -118,6 +118,35 @@ a.subcategory-name:hover{
     background-color: #0b447c !important;
 }
 
+/* Product page */
+.product-images .js-thumb-selected {
+    border: #0b447c 3px solid;
+}
+
+.product-actions .btn{
+    background-color: #0b447c !important;
+    border: 1px solid #0b447c !important;
+    border-radius: 5px !important;
+}
+
+.product-actions .material-icons.shopping-cart {
+    color: white;
+}
+
+.product-actions .btn:hover {
+    background-color: #2f84da !important;
+    border: 1px solid #2f84da !important;
+    border-radius: 5px !important;
+}
+
+.product-prices .has-discount .current-price-value {
+    color: #840000;
+}
+
+.product-prices .has-discount .discount {
+    background-color: #840000;
+}
+
 /* shadow boxes */
 #js-product-list-header {
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
