--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -147,6 +147,10 @@ a.subcategory-name:hover{
     background-color: #840000;
 }
 
+.blockreassurance_product .item-product {
+    color: #840000;
+}
+
 /* shadow boxes */
 #js-product-list-header {
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
