--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -172,6 +172,10 @@ a.subcategory-name:hover{
     border-bottom: #0b447c 3px solid;
 }
 
+.product-container .tabs .nav-item:hover {
+    border-bottom: #0b447c 3px solid !important;
+}
+
 /* shadow boxes */
 #js-product-list-header {
     box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%), 0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
