--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -22,6 +22,26 @@ a:hover {
     background-color: white !important;
 }
 
+
+.form-footer .btn {
+    background-color: #0b447c !important;
+    border: 1px solid #0b447c !important;
+    border-radius: 5px !important;
+}
+
+.form-footer .btn:hover {
+    background-color: #2f84da !important;
+    border: 1px solid #2f84da !important;
+    border-radius: 5px !important;
+}
+input.form-control {
+    background-color: white !important;
+    color: #0b447c !important;
+    border: 1px solid #0b447c !important;
+}
+input.form-control:focus {
+    border: 4px solid #0b447c !important;
+}
 /* Header */
 
 div.header-top, .header-top .sub-menu {
