--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -125,7 +125,7 @@ li.ui-menu-item a:hover {
     color: white !important;
 }
 
-.active .header {
+.blockcart.cart-preview.active {
     background-color: #840000 !important;
 }
 
