--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -79,9 +79,16 @@ input.form-control {
     border: 1px solid #0b447c !important;
 }
 
+/* Kontakt*/
+
 .contact-rich .material-icons {
     color: #840000 !important;
 }
+
+.contact-rich h4, .contact-form h3 {
+    color: #0b447c !important;
+}
+
 
 /* Header */
 
