--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -79,6 +79,16 @@ input.form-control {
     border: 1px solid #0b447c !important;
 }
 
+/* Pop up */
+
+.modal-content {
+    background-color: white !important;
+}
+
+.modal-content img.selected.thumb {
+    border: 1px solid #840000 !important;
+    outline: 0 !important;
+}
 /* Kontakt*/
 
 .contact-rich .material-icons {
