--- a/themes/child_classic/assets/css/custom.css
+++ b/themes/child_classic/assets/css/custom.css
@@ -192,6 +192,18 @@ li.ui-menu-item a:hover {
     margin-top: 10px;
 }
 
+@media only screen and (min-width: 992px) {
+    .col-md-2.header_logo {
+        margin-top: 15px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .col-md-2.header_logo {
+        margin-top: 10px;
+    }
+}
+
 /* Footer */
 
 #footer form .btn {
